--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <nav class="header-nav">
                         <ul class="header-ul">
                             <li class="header-li"><a class="header-href" href="#">HOME</a></li>
-                            <li class="header-li"><a class="header-href" href="#">HEADPHONES</a></li>
-                            <li class="header-li"><a class="header-href" href="#">SPEAKERS</a></li>
-                            <li class="header-li"><a class="header-href" href="#">EARPHONES</a></li>
+                            <li class="header-li"><a class="header-href" href="headphones.html">HEADPHONES</a></li>
+                            <li class="header-li"><a class="header-href" href="speakers.html">SPEAKERS</a></li>
+                            <li class="header-li"><a class="header-href" href="earphones.html">EARPHONES</a></li>
                         </ul>
                     </nav>
                     <img class="header-shop-img" src="./img/header-shop.png" alt="shop" width="23" height="20">
